# Dot-Linker

./: LICENSE  README  README.md  TODO  alias-matcher.cabal  dot-linker.cabal  stack.yaml
app/: Main.hs
example/: example-config-map.dl
src/: DotLinker.hs
src/DotLinker/: Parsers.hs
test/: Test.hs
