name:                dot-linker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pjrt/alias-matcher#readme
license:             BSD3
license-file:        LICENSE
author:              Pedro Rodriguez Tavarez
maintainer:          pedro@pjrt.co
copyright:           2016 Pedro Rodriguez Tavarez
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dot-linker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , unordered-containers
                     , unix
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pjrt/alias-matcher
