name:                dot-linker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pjrt/Dot-Linker#readme
license:             BSD3
license-file:        LICENSE
author:              Pedro Rodriguez Tavarez
maintainer:          pedro@pjrt.co
copyright:           2016 Pedro Rodriguez Tavarez
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DotLinker
                     , DotLinker.Parsers
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , turtle
                     , text
                     , system-filepath
                     , unix
                     , unordered-containers
  ghc-options:         -Wall
  default-language:    Haskell2010

executable dot-linker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , attoparsec
                     , dot-linker
                     , turtle
                     , text
                     , unordered-containers
  default-language:    Haskell2010

test-suite dot-linker-spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
     base
   , bytestring
   , dot-linker
   , HUnit
   , tasty
   , tasty-hunit
   , attoparsec
   , turtle
   , unordered-containers

source-repository head
  type:     git
  location: https://github.com/pjrt/Dot-Linker
